--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ GITHUB_SECRET=44057b46de5715d7ff382780c0968525c3e96623
 GOOGLE_CLIENT_ID=319874032816-fd7a2qkhgqfbko4t8t1kmpt8haajl8t7.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = dylk2q9xw
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = dylk2q9xwgit 
